database.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database
  namespace: cluster-projet
  labels:
    app: database
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
        - image: nico916/projectv2-database:v1
          name: database
          ports:
            - containerPort: 1433
---
apiVersion: v1
kind: Service
metadata:
  name: database
  namespace: cluster-projet
spec:
  selector:
    app: database
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
  type: ClusterIP
