ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: cluster-projet
  annotations:
    kubernetes.io/ingress.class: nginx
    # nginx.ingress.kubernetes.io/redirect-regex: ^/(.*)
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - localhost
    secretName: aks1-ingress-tls
  rules:
  - host: localhost
    http: 
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: web
            port:
              number: 80
